fixing keyword bullet visibility margin

--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ footer p {
     clear: both;
     height: 0;
 }
+.wrapper ul {margin-left:20px;}
 
 .full, .third, .half, .quarter {
     margin-bottom: 32px;
